# opengl_start

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: EBO.cpp  main.cpp  shaderClass.cpp
src/header/: shaderClass.h
